--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ CancerDiagnoser/blood_cancer_model.h5
 CancerDiagnoser/brain_tumor_model.h5
 CancerDiagnoser/kidney_cancer_model.h5
 CancerDiagnoser/lung_cancer_model.h5
+CancerDiagnoser/skin_cancer_model.h5
 mental_health/chatbot_model_mental_health_sympt.h5
 mental_health/chatbot_model_mental_health.h5
 mental_health/rf_classifier_model_mental_health.pkl
